Fixed too much whitespace on front page.

--- a/wp-content/themes/rememberthisname-roots/style.css
+++ b/wp-content/themes/rememberthisname-roots/style.css
@@ -117,12 +117,12 @@
 /* Space out sub-sections more
 -------------------------------------------------- */
 section {
-    padding-top: 60px;
+    padding-top: 10px;
 }
 /* Faded out hr */
 hr.soften {
     height: 1px;
-    margin: 54px 0;
+    margin: 10px 0;
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
     background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
     background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
